# terraforming-mars-data

./: .env.example  .gitignore  README.md  batch_user_aggregate.py  card.ipynb  card_analysis.py  check_games_coverage.py  check_unmatched_players.py  data_transform.ipynb  dwd.ipynb  game_analysis.py  pgOperation.py  preprocess.py  preprocessing.ipynb  pyproject.toml  requirements.txt  test_user_aggregate.py  user_aggregate.py  user_analysis.py  users.ipynb
display/: award_2p_stats.csv  award_4p_stats.csv  award_stats.csv  card_2p_stats.csv  card_2p_vs_4p_comparison.csv  card_2p_vs_4p_scatter.csv  card_4p_stats.csv  card_4p_weighted_filtered.csv  card_4p_weighted_full.csv  card_4p_winrate_filtered.csv  card_4p_winrate_full.csv  card_all_stats.csv  card_corporation_synergy_filtered.csv  card_stats_2p_filtered.csv  card_stats_2p_full.csv  card_stats_4p_filtered.csv  card_stats_4p_full.csv  card_stats_by_players_filtered.csv  card_stats_by_players_full.csv  card_stats_filtered.csv  card_stats_full.csv  colony_2p_stats.csv  colony_4p_stats.csv  colony_stats.csv  corporation_2p_stats.csv  corporation_2p_vs_4p_scatter.csv  corporation_4p_stats.csv  corporation_4p_weighted_filtered.csv  corporation_4p_weighted_full.csv  corporation_4p_winrate_filtered.csv  corporation_4p_winrate_full.csv  corporation_all_stats.csv  corporation_combinations_filtered.csv  corporation_combinations_full.csv  corporation_popularity_filtered.csv  corporation_popularity_full.csv  corporation_usage_filtered.csv  corporation_usage_full.csv  final_matched.csv  final_unmatched.csv  (+33 more)
(+5 files in other folders)
